--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,8 @@ android:anyDensity="true"
         <activity
             android:name=".BalloonsActivity"
             android:label="@string/app_name" 
-            android:configChanges="orientation|keyboardHidden">
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,7 +45,8 @@ android:anyDensity="true"
         </activity>
         <activity android:name="org.apache.cordova.DroidGap"
                   android:label="@string/app_name"
-                  android:configChanges="orientation|keyboardHidden">
+                  android:screenOrientation="portrait"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter> </intent-filter>
         </activity>
     </application>
