--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,8 @@ android:anyDensity="true"
             android:name=".BalloonsActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            android:configChanges="keyboardHidden|screenSize">
+          <!-- was: android:configChanges="orientation|keyboardHidden|screenSize" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
