--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@ android:anyDensity="true"
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+<uses-feature android:name="android.hardware.screen.portrait" />
 
     <uses-sdk android:minSdkVersion="13" />
 
@@ -34,21 +35,16 @@ android:anyDensity="true"
         android:label="@string/app_name" >
         <activity
             android:name=".BalloonsActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|screenSize">
+            android:label="@string/app_name"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="sensor"
+            android:configChanges="keyboardHidden|screenSize|orientation">
           <!-- was: android:configChanges="orientation|keyboardHidden|screenSize" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="org.apache.cordova.DroidGap"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:configChanges="orientation|keyboardHidden|screenSize">
-            <intent-filter> </intent-filter>
         </activity>
     </application>
 
