--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 AddType text/cache-manifest .manifest
 AddType application/x-web-app-manifest+json .webapp
+AddType video/webm .webm
+AddType audio/ogg .ogg
+AddType audio/mpeg .mp3
