--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,5 @@
-AddType text/cache-manifest .manifest
+AddType text/cache-manifest .appcache
 AddType application/x-web-app-manifest+json .webapp
-AddType video/webm .webm
-AddType audio/webm .weba
+AddType application/webm .webm
 AddType audio/ogg .ogg
 AddType audio/mpeg .mp3
