--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 AddType text/cache-manifest .appcache
 AddType application/x-web-app-manifest+json .webapp
-AddType application/webm .webm
+AddType video/webm .webm
 AddType audio/ogg .ogg
 AddType audio/mpeg .mp3
